# coursework_1

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml
data/: cashback.json  operations.xls  result_stoncks.json  spending_by_category.csv  spending_by_category.json  views_output.json
scr/: main.py  open_file.py  reports.py  services.py  views.py
tests/: spending_by_category.json  test_api.py  test_reports.py  test_servises.py  test_views.py
